// Copyright 2017 Intel Corporation
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";
import "state.proto";

message PikePayload {
  enum Action {
    ACTION_UNSET = 0;

    CREATE_AGENT = 1;
    UPDATE_AGENT = 2;

    CREATE_ORGANIZATION = 3;
    UPDATE_ORGANIZATION = 4;

    CREATE_SMART_PERMISSION = 5;
    UPDATE_SMART_PERMISSION= 6;
    DELETE_SMART_PERMISSION = 7;
  }

  Action action = 1;

  CreateAgentAction create_agent = 2;
  UpdateAgentAction update_agent = 3;

  CreateOrganizationAction create_organization = 4;
  UpdateOrganizationAction update_organization = 5;
}

message CreateAgentAction {
  string org_id = 1;
  string public_key = 2;
  bool active = 3;
  repeated string roles = 4;
  repeated KeyValueEntry metadata = 5;
}

message UpdateAgentAction {
  string org_id = 1;
  string public_key = 2;
  bool active = 3;
  repeated string roles = 4;
  repeated KeyValueEntry metadata = 5;
}

message CreateOrganizationAction {
  string id = 1;
  string name = 2;
  string address = 3;
}

message UpdateOrganizationAction {
  string id = 1;
  string name = 2;
  string address = 3;
}
